fix service item overflow

--- a/style.css
+++ b/style.css
@@ -245,11 +245,11 @@
 
 .service-item{
     margin: 24px;
-    width: 300px;
+    width: 320px;
 }
 
 .service-img{
-    width: 300px;
+    width: 320px;
     height: 220px;
 }
 
